Source/CUDA.Runtime.pas


cudaBindTexture: function(var offset: NativeUInt; const texref: PTextureReference;
    var devPtr: Pointer; var desc: TCudaChannelFormatDesc; size: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaBindTexture2D: function(var offset: NativeUInt; const texref: PTextureReference; const devPtr: Pointer;
    var desc: TCudaChannelFormatDesc; width, height, pitch: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaBindTextureToArray: function(const texref: PTextureReference; const cudaArray: PcudaArray): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaUnbindTexture: function(const texref: PTextureReference): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetTextureAlignmentOffset: function(offset: NativeUInt; const texref: PTextureReference): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetTextureReference: function(const texref: PTextureReference; const symbol: PAnsiChar): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetChannelDesc: function(var desc: TCudaChannelFormatDesc; const array_: Pointer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaCreateChannelDesc: function(x, y, z, w: Integer; f: TCudaChannelFormatKind): TCudaChannelFormatDesc;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(* ******************************************************************************
  *                                                                              *
  *                                                                              *
  *                                                                              *
  ****************************************************************************** *)

cudaMalloc3D: function(var pitchedDevPtr: TcudaPitchedPtr; extent: TcudaExtent): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMalloc3DArray: function(var arrayPtr: PcudaArray; const desc: TCudaChannelFormatDesc; extent: TcudaExtent; flags: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemset3D: function(pitchedDevPtr: TcudaPitchedPtr; value: Integer; extent: TcudaExtent): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy3D: function(const p: TcudaMemcpy3DParms): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy3DAsync: function(const p: TcudaMemcpy3DParms; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMalloc: function(var devPtr; size: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMallocHost: function(var ptr: Pointer; size: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
  cudaMallocPitch: function(var devPtr; var pitch: NativeUInt; width: NativeUInt; height: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMallocArray: function(var aarray: Pointer; var desc: TCudaChannelFormatDesc; width: NativeUInt; height: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaFree: function(devPtr: Pointer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaFreeHost: function(ptr: Pointer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaFreeArray: function(const aarray: Pointer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaHostAlloc: function(var pHost: Pointer; bytes: NativeUInt; flags: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaHostGetDevicePointer: function(var pDevice: Pointer; pHost: Pointer; flags: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaHostGetFlags: function(var pFlags: Cardinal; pHost: Pointer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemGetInfo: function(var free: NativeUInt; var total: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy: function(dst: Pointer; src: Pointer; count: NativeUInt; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyToArray: function(var dst: PcudaArray; wOffset: NativeUInt; hOffset: NativeUInt; var src; count: NativeUInt; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyFromArray: function(var dst; const src: PcudaArray; wOffset: NativeUInt; hOffset: NativeUInt; count: NativeUInt; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyArrayToArray: function(dst: PcudaArray; wOffsetDst: NativeUInt; hOffsetDst: NativeUInt; const src: PcudaArray; wOffsetSrc: NativeUInt;
    hOffsetSrc: NativeUInt; count: NativeUInt; const kind: TcudaMemcpyKind = cudaMemcpyDeviceToDevice): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2D: function(var dst; dpitch: NativeUInt; var src; spitch: NativeUInt;
    width: NativeUInt; height: NativeUInt; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2DToArray: function(dst: PcudaArray; wOffset: NativeUInt;
  hOffset: NativeUInt; var src; spitch: NativeUInt; width: NativeUInt; height: NativeUInt; kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2DFromArray: function(var dst; dpitch: NativeUInt; src: PcudaArray; wOffset: NativeUInt; hOffset: NativeUInt; width: NativeUInt; height: NativeUInt;
    kind: TcudaMemcpyKind): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2DArrayToArray: function(dst: PcudaArray; wOffsetDst: NativeUInt;
    hOffsetDst: NativeUInt; src: PcudaArray; wOffsetSrc: NativeUInt; hOffsetSrc: NativeUInt;
    width: NativeUInt; height: NativeUInt; const kind: TcudaMemcpyKind = cudaMemcpyDeviceToDevice): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyToSymbol: function(symbol: PAnsiChar; var src; count: NativeUInt; const offset: NativeUInt = 0;
    const kind: TcudaMemcpyKind = cudaMemcpyHostToDevice): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyFromSymbol: function(var dst; symbol: PAnsiChar; count: NativeUInt; const offset: NativeUInt = 0;
    const kind: TcudaMemcpyKind = cudaMemcpyDeviceToHost): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}

{ +//*************************************************************************** }
{ -** }
{ -** }
{ -** }
{ =***************************************************************************** }

cudaMemcpyAsync: function(var dst; const src; count: NativeUInt; kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyToArrayAsync: function(dst: PcudaArray; wOffset: NativeUInt; hOffset: NativeUInt; const src; count: NativeUInt; kind: TcudaMemcpyKind;
    stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyFromArrayAsync: function(var dst; const src: PcudaArray;
    wOffset: NativeUInt; hOffset: NativeUInt; count: NativeUInt; kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2DAsync: function(var dst; dpitch: NativeUInt; const src;
    spitch: NativeUInt; width: NativeUInt; height: NativeUInt; kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2DToArrayAsync: function(dst: PcudaArray; wOffset: NativeUInt;
    hOffset: NativeUInt; const src; spitch: NativeUInt; width: NativeUInt; height: NativeUInt;
    kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpy2DFromArrayAsync: function(var dst; dpitch: NativeUInt;
    const src: PcudaArray; wOffset: NativeUInt; hOffset: NativeUInt; width: NativeUInt;
    height: NativeUInt; kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyToSymbolAsync: function(const symbol: PAnsiChar; const src;
    count: NativeUInt; offset: NativeUInt; kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemcpyFromSymbolAsync: function(var dst; const symbol: PAnsiChar;
  count: NativeUInt; offset: NativeUInt; kind: TcudaMemcpyKind; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}

(******************************************************************************
 *                                                                            *
 *                                                                            *
 *                                                                            *
 *****************************************************************************)

cudaMemset: function(var devPtr; value: Integer; count: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaMemset2D: function(var devPtr; pitch: NativeUInt; value: Integer;
    width: NativeUInt; height: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(*****************************************************************************
 *                                                                           *
 *                                                                           *
 *                                                                           *
 *****************************************************************************)

cudaGetSymbolAddress: function(var devPtr: Pointer; const symbol: PAnsiChar): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetSymbolSize: function(var size: NativeUInt; const symbol: PAnsiChar): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}

{ +//*************************************************************************** }
{ -** }
{ -** }
{ -** }
{ =***************************************************************************** }

cudaGetDeviceCount: function(var count: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetDeviceProperties: function(var prop: TCudaDeviceProp; device: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaChooseDevice: function(var device: Integer; const prop: PCudaDeviceProp): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaSetDevice: function(device: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetDevice: function(var device: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaSetDeviceFlags: function(flags: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaSetValidDevices: function(device_arr: PInteger; len: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(******************************************************************************
 *
 *
 *
 *****************************************************************************)

cudaConfigureCall: function(gridDim, blockDim: TDim3; sharedMem: NativeUInt; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaSetupArgument: function(const arg: Pointer; size: NativeUInt; offset: NativeUInt): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaFuncSetCacheConfig: function(const func: PAnsiChar; cacheConfig: TcudaFuncCache): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaLaunch: function(const entry: PAnsiChar): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaFuncGetAttributes: function(var attr: TcudaFuncAttributes; const func: PAnsiChar): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
  { +//****************************************************************************** }
  { -** }
  { -** }
  { -** }
  { =*******************************************************************************/ }
